# MangoEditor

./: .clang-format  .clang-tidy.yaml  .cmake-format.yaml  .editorconfig  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  FUNDING.yml  Info.plist.in.xml  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  appveyor.yml  mangoeditor.conf  mangoeditor.desktop.ini  mangoeditor.rc
ci/: qt-installer-script.js
src/: editor_core.cpp  editor_core.h  main.cpp
src/plugins/: interface.h  manager.cpp  manager.h
src/syntax/: highlighter.cpp  highlighter.h
src/syntax/language_defs/: cpp.json  java.json  javascript.json  markdown.json  python.json
src/ui/: main_window.cpp  main_window.h  status_bar.cpp  status_bar.h  tab_system.cpp  tab_system.h
src/utilities/: file_io.cpp  file_io.h  logger.cpp  logger.h  settings.cpp  settings.h
